# tracer-backend-for-IFS4205-testing

./: pyproject.toml
..github/workflows/: ci.yml  sast.yml
accounts/: authentication.py  exceptions.py  hooks.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/vault/: __init__.py  totp.py
buildings/: admin.py  models.py  serializers.py  urls.py  views.py
buildings/migrations/: 0001_initial.py
database_routers/: default.py  main.py
infections/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
infections/migrations/: 0001_initial.py  0002_alter_users_phone.py
tracer_backend/: asgi.py  settings.py  urls.py  wsgi.py
